--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -4,6 +4,7 @@
 html {
   font-size: $font-size-base;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
